# Sight-GPU

./: .gitattributes  .gitignore  Cargo.toml  Justfile  Makefile.toml  README.md
gpu_info/: .gitignore  Cargo.toml  build.rs
gpu_info/c_src/intel/: intel.c  intel_chipset.h  intel_gpu_tools.h  intel_reg.h
gpu_info/c_src/nvidia/: a.out  main  main.c  nvidia.c  nvidia.h
gpu_info/src/: lib.rs  main.rs  nvidia.rs
gpu_info/src/intel/: mod.rs
gpu_info/src/nvidia/: bindings.rs  mod.rs
src/: app.rs  lib.rs  main.rs  prelude.rs  ui.rs
src/app/: event.rs  handler.rs  mod.rs  tui.rs  ui.rs
src/core/: app.rs  event.rs  handler.rs  mod.rs  tui.rs  ui.rs
src/gpu_info/: amd.rs  intel.rs  mod.rs  nvidia.rs
src/widgets/: mod.rs  progress_bar.rs
