[package]
name = "sight-gpu"
edition = "2021"
version = "0.1.0"
rust-version = "1.70.0"
authors = ["Cooper Walbrun <mail@cooperwalbrun.io>"]
description = "A short description of your project."
documentation = "https://github.com/cooperwalbrun/rust-template/blob/master/README.md"
homepage = "https://github.com/cooperwalbrun/rust-template"
repository = "https://github.com/cooperwalbrun/rust-template"
keywords = ["clippy", "llvm", "rust", "rustfmt", "template"]
readme = "README.md"
license-file = "LICENSE"
exclude = ["/.github/*", "/Makefile.toml", "/clippy.toml", "/rustfmt.toml"]


[lib]
crate-type = ["lib"]


[dependencies]
crossterm = "0.27.0"
ratatui = "0.24.0"
libc = "0.2.148"
thiserror = "1.0.48"
clap = { version = "4.4.11", features = ["derive"] }

[dev-dependencies]
