[package]
name = "gpu_info"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "default"
path = "src/main.rs"

[[bin]]
name = "nvidia"
path = "src/nvidia_bin.rs"


[build-dependencies]
bindgen = "0.68.1"
cc = "1.0.83"

[dependencies]
libc = "0.2.148"
thiserror = "1.0.48"
